Overflow solved - 3

--- a/css/style.css
+++ b/css/style.css
@@ -999,7 +999,8 @@ footer {
 }
 @media only screen and (max-width: 940px) {
   html {
-    overflow-x: hidden;
+    overflow-x: clip;
+    max-width: 100vh;
   }
   .left-nav {
     position: absolute;
